[gd_scene load_steps=5 format=2]

[ext_resource path="res://Stick/Sticks.png" type="Texture" id=1]
[ext_resource path="res://Stick/sticks.gd" type="Script" id=2]
[ext_resource path="res://Coins/coins.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 45.0999

[node name="Sticks" type="Node2D"]
script = ExtResource( 2 )

[node name="Sticks" type="Sprite" parent="."]
scale = Vector2( 7, 7 )
texture = ExtResource( 1 )

[node name="Coins" type="Sprite" parent="."]
visible = false
scale = Vector2( 7, 7 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
